# CEDAR

./: .gitignore  README.md  pyproject.toml
experiments_gr/: GR_100.tsv  GR_1000.tsv  README  README.md  orders_100.tsv  orders_1000.tsv
experiments_hc/: README.md  run_fluA.sh  run_h3n2_na_20.sh  run_template.sh  run_yeast.sh  run_zika.sh  summary.sh
experiments_hc/data/: yeast.fasta
experiments_hc/results/fluA/: fluA.dist  fluA_1.csv  fluA_1.tsv  fluA_10.tsv  fluA_2.tsv  fluA_3.csv  fluA_3.tsv  fluA_4.tsv  fluA_5.csv  fluA_5.tsv  fluA_6.csv  fluA_6.tsv  fluA_7.csv  fluA_7.tsv  fluA_8.csv  fluA_8.tsv  fluA_9.tsv  fluA_HOP.dist  fluA_RF.dist  fluA_best_tree_1.nwk  fluA_best_tree_10.nwk  fluA_best_tree_2.nwk  fluA_best_tree_3.nwk  fluA_best_tree_4.nwk  fluA_best_tree_5.nwk  fluA_best_tree_6.nwk  fluA_best_tree_7.nwk  fluA_best_tree_8.nwk  fluA_best_tree_9.nwk  fluA_best_trees.nwk  fluA_best_trees.treevec  fluA_scores.csv
experiments_hc/results/h3n2_na_20/: h3n2_na_20.dist  h3n2_na_20_1.tsv  h3n2_na_20_10.tsv  h3n2_na_20_2.csv  h3n2_na_20_2.tsv  h3n2_na_20_3.tsv  h3n2_na_20_4.tsv  h3n2_na_20_5.csv  h3n2_na_20_5.tsv  h3n2_na_20_6.tsv  h3n2_na_20_7.csv  h3n2_na_20_7.tsv  h3n2_na_20_8.csv  h3n2_na_20_8.tsv  h3n2_na_20_9.csv  h3n2_na_20_9.tsv  h3n2_na_20_HOP.dist  h3n2_na_20_RF.dist  h3n2_na_20_best_tree_1.nwk  (+12 more)
src/: CEDAR.py  GelmanRubin.py  HC.py  HOP.py  LIS.py  LeavesOrder.py  Newick.py  TreeSpace.py  TreeVec.py  _raxml.py  utils.py
src/cedar/: CEDAR.py  GelmanRubin.py  HOP.py  LIS.py  LeavesOrder.py  Newick.py  TreeSpace.py  TreeVec.py  __init__.py  _raxml.py
(+65 files in other folders)
